There is some reason the gap is not working and at the moment I have to use a media queries directly, I'm gonig to resolve it later

--- a/src/components/marc/MarcComponent.scss
+++ b/src/components/marc/MarcComponent.scss
@@ -3,8 +3,6 @@
 
 .marcSection {
 	@include mixins.paddingYMarcSection(2rem, 2rem);
-	min-height: 600px;
-	height: 100vh;
 	width: 100%;
 	background: variables.$primary-background-color;
 
@@ -16,9 +14,13 @@
 			space-between,
 			center
 		);
-		@include mixins.gapSectionWrapper(0);
 		width: 100%;
 		height: 100%;
+		gap: 1rem;
+
+		@media (min-width: 576px) {
+			gap: 4rem;
+		}
 
 		.imgContainer {
 			@include mixins.flexImg(flex, center, center);
